@@ -178,11 +178,8 @@ font/devps/prologue: $(devps_srcdir)/prologue.ps
 	$(AM_V_GEN)$(MKDIR_P) font/devps \
 	&& $(RM) $@ \
 	&& sed -f $(devps_srcdir)/psstrip.sed $? >$@
-font/devps/zapfdr.pfa: $(devps_srcdir)/zapfdr.ps
-	$(AM_V_GEN)$(MKDIR_P) font/devps \
-	&& $(RM) $@ \
-	&& sed -f $(devps_srcdir)/psstrip.sed $? >$@
-font/devps/symbolsl.pfa: $(devps_srcdir)/symbolsl.ps
+
+.ps.pfa:
 	$(AM_V_GEN)$(MKDIR_P) font/devps \
 	&& $(RM) $@ \
 	&& sed -f $(devps_srcdir)/psstrip.sed $? >$@
