@@ -1,5 +1,10 @@
 2022-11-08  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* font/devps/devps.am: Refactor.  Turn two identical target
+	rules into a (BSD-make-style, old-fashioned) pattern rule.
+
+2022-11-08  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* configure.ac: Rechristen self "GNU roff".
 
 2022-11-07  G. Branden Robinson <g.branden.robinson@gmail.com>
